sylvia/tests/ui/missing_method/msgs_misused.stderr
error: The message attribute `instantiate` is not supported in interfaces.

         = note: Contracts need to implement `instantiate` method within their `impl` block.

  --> tests/ui/missing_method/msgs_misused.rs:16:12
   |
16 |         fn instantiate(&self, ctx: InstantiateCtx) -> StdResult<Response>;
   |            ^^^^^^^^^^^

error: The message attribute `migrate` is not supported in interfaces

         = note: Contracts need to implement `migrate` method within their `impl` block.

  --> tests/ui/missing_method/msgs_misused.rs:19:12
   |
19 |         fn migrate(&self, ctx: MigrateCtx) -> StdResult<Response>;
   |            ^^^^^^^

error: More than one instantiation or migration message

         = note: Instantiation/Migration message previously defined here

  --> tests/ui/missing_method/msgs_misused.rs:30:12
   |
30 |     pub fn instantiate(&self, ctx: InstantiateCtx) -> StdResult<Response> {
   |            ^^^^^^^^^^^
